--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CEF0FF"
-    tools:context=".MainActivity">
+    tools:context="com.example.sportetu.MainActivity">
 
 
     <FrameLayout
@@ -14,15 +14,32 @@
         android:id="@+id/fragment_container"
         android:layout_above="@+id/bottom_navigation"/>
 
+
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="74dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#7FC9FF"
-        app:itemIconSize="65dp"
+        app:itemIconSize="70dp"
         app:itemIconTint="#FFFFFF"
+        android:paddingBottom="13dp"
+        app:menu="@menu/bottom_navigation"
+        />
 
-        app:menu="@menu/bottom_navigation" />
+<androidx.appcompat.widget.Toolbar
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#6693ff"
+    android:elevation="4dp"
+    app:menu="@menu/top_navigation"
+    app:title="SPORT'ETU"
+    app:titleTextColor="#FFFFFF"
+    app:titleMarginStart="150dp"
+
+    />
+
+
 
 </RelativeLayout>
