--- a/app/src/main/res/layout/fragment_entrainement.xml
+++ b/app/src/main/res/layout/fragment_entrainement.xml
@@ -4,7 +4,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="page progression"
+        android:text="page entrainement"
         android:textSize="30dp"
         android:layout_centerInParent="true"/>
 
