--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.sportetu.IHM"
+    tools:openDrawer="start">
+
+
+<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CEF0FF"
-    tools:context="com.example.sportetu.IHM">
+    tools:context="com.example.sportetu.IHM"
+    >
 
 
     <FrameLayout
@@ -33,23 +43,29 @@
     android:layout_height="wrap_content"
     android:background="#6693ff"
     android:elevation="4dp"
-    app:menu="@menu/top_navigation"
-    app:title="SPORT'ETU"
+
+    app:title="Sport'ETU"
     app:titleTextColor="#FFFFFF"
     app:titleMarginStart="150dp"
-
+    android:id="@+id/toolbar"
     />
 
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="#2c367a"
-        app:itemTextColor="#ffffff"
-        app:itemIconTint="#ffffff"
-        app:menu="@menu/drawer_navigation"
-       android:layout_gravity="start"
-/>
+
 
 
 </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#2c367a"
+        app:headerLayout="@layout/header"
+        app:itemTextColor="#ffffff"
+        app:itemIconTint="#ffffff"
+        app:menu="@menu/drawer_navigation"
+
+        />
+</androidx.drawerlayout.widget.DrawerLayout>
