--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,13 +2,25 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="160dp"
     android:orientation="vertical"
-    android:background="@drawable/blue_drawer">
+    android:background="@drawable/blue_drawer"
+    android:padding="20dp">
 
-<androidx.appcompat.widget.AppCompatTextView
+<TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Nom prenom"
-    
+    android:text="Nom Prénom"
+    android:textColor="#ffffff"
+    android:textStyle="bold"
+
+    />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID utilisateur"
+        android:textColor="#ffffff"
+
+
+        />
 </LinearLayout>
