--- a/app/src/main/res/menu/drawer_navigation.xml
+++ b/app/src/main/res/menu/drawer_navigation.xml
@@ -7,4 +7,8 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="paramètres"
         />
+    <item android:id="@+id/logout"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
+        android:title="se déconnecter"
+        />
 </menu>
