interface de la page d'accueil

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
     app:title="Sport'ETU"
     app:titleTextColor="#FFFFFF"
     app:titleMarginStart="150dp"
-    android:id="@+id/toolbar"
+    android:id="@+id/top_navigation"
     />
 
 
