--- a/app/src/main/res/layout/activity_authentification.xml
+++ b/app/src/main/res/layout/activity_authentification.xml
@@ -54,8 +54,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.25" />
 
+
+
+
     <EditText
-        android:id="@+id/prenom"
+        android:id="@+id/mdp_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -63,7 +66,7 @@
         android:background="#253695"
         android:ems="10"
         android:hint="mot de passe"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -73,7 +76,11 @@
         app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35000002" />
+        app:layout_constraintVertical_bias="0.35000002"
+        />
+
+
+
 
     <Button
         android:id="@+id/connexion"
@@ -134,7 +141,7 @@
         android:id="@+id/credits_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Développé par:\n Amine ABOUSALHAM \n Benoit FAUCHERY \n DANOVAN NGUYEN \n Antoint PIRET"
+        android:text="Développé par:\n Amine ABOUSALHAM \n Benoit FAUCHERY \n Danovan NGUYEN \n Antoine PIRET"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -142,6 +149,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.975" />
+
+    <ProgressBar
+
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.83"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.94" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
