--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -8,19 +8,29 @@
     android:padding="20dp">
 
 <TextView
+    android:id="@+id/prenom_user"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Nom Prénom"
+    android:text="prenom "
     android:textColor="#ffffff"
     android:textStyle="bold"
-
     />
     <TextView
+        android:id="@+id/nom_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ID utilisateur"
+        android:text="nom "
         android:textColor="#ffffff"
-
-
+        android:textStyle="bold"
         />
+
+    <TextView
+
+        android:id="@+id/email_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="email"
+        android:textColor="#ffffff" />
+
+
 </LinearLayout>
