--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,65 +6,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.sportetu.IHM"
-    tools:openDrawer="start">
 
-
-<RelativeLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#CEF0FF"
-    tools:context="com.example.sportetu.IHM"
     >
 
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_container"
-        android:layout_above="@+id/bottom_navigation"/>
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+        tools:context="com.example.sportetu.IHM">
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottom_navigation"
+            android:layout_below="@+id/top_navigation"
+
+             />
 
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
+            android:paddingBottom="13dp"
+            app:itemIconSize="70dp"
+            app:itemIconTint="#FFFFFF"
+            app:menu="@menu/bottom_navigation" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#7FC9FF"
-        app:itemIconSize="70dp"
-        app:itemIconTint="#FFFFFF"
-        android:paddingBottom="13dp"
-        app:menu="@menu/bottom_navigation"
-        />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/top_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            app:menu="@menu/top_navigation"
+            app:title="Sport'ETU"
 
-<androidx.appcompat.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#6693ff"
-    android:elevation="4dp"
-    app:menu="@menu/top_navigation"
-    app:title="Sport'ETU"
-    app:titleTextColor="#FFFFFF"
-    app:titleMarginStart="150dp"
-    android:id="@+id/top_navigation"
-    />
+            app:titleMarginStart="150dp"
+            app:titleTextColor="@color/textcolor" />
 
 
-
-
-
-</RelativeLayout>
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#2c367a"
+        android:background="@color/colorPrimaryDark"
         app:headerLayout="@layout/header"
-        app:itemTextColor="#ffffff"
-        app:itemIconTint="#ffffff"
+        app:itemTextColor="@color/textcolor"
+        app:itemIconTint="@color/textcolor"
         app:menu="@menu/drawer_navigation"
 
         />
