--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#6B94F8</color>
+    <color name="colorPrimaryDark">#2c367a</color>
+    <color name="colorAccent">#A1D9F1</color>
+    <color name="textcolor">#FFFFFF</color>
+    <color name="textcolorblue">#094670</color>
+    <color name="colorView">#FFFFFF</color>
+    <color name="textcolortransparent">#80FFFFFF</color>
 </resources>
