--- a/app/src/main/res/layout/fragment_succes.xml
+++ b/app/src/main/res/layout/fragment_succes.xml
@@ -107,7 +107,7 @@
         app:layout_constraintTop_toTopOf="@+id/ProchainObjectifView" />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/dateObjectif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
